# clearprice-houston-oncology-pricing

./: .gitignore  ClearPrice_Build_Methodology.html  MRF_Intelligence_Product_BA.md  README.md  Specialty Drug Pricing MRF Intelligence Report.md  houston_candidates_final.json  methodology_dump.txt  oncology_top5_asp_reference.json  oncology_top5_by_category.json  texas_dump.csv
backend/: export_xlsx.py  pyproject.toml  requirements.txt  resume_ingest.py
backend/src/: config.py
backend/src/api/: breakdowns.py  drugs.py  hospitals.py  main.py
backend/src/calc/: breakdown.py  cgt_risk.py  charge_range.py  coinsurance.py  dose.py  dose_scaling.py  margin_verdict.py  markup.py  reimbursement.py  roster.py
backend/src/ingestion/: charge_record.py  ingest_hospital.py  parse_csv.py  parse_json.py  parse_json_streaming.py  parse_xlsx.py  parse_zip.py  run_all.py  tall_format.py  tracked_codes.py
backend/src/reference_data/: 340B_pricing_research.md  citation.py  drugs.py  drugs_list.tsv  hospitals.py  houston_candidates_final.json
backend/src/reference_data/fda_wac_research/: antibody_drug_conjugates.json  chemotherapy.json  (+5 more)
backend/src/verification/: enrollment_340b.py  hospital_identity.py  payer_scheme.py  provenance_gate.py
backend/tests/contract/: test_api_provenance.py  test_provenance_gate_calc.py  test_provenance_gate_ingestion.py
backend/tests/integration/: test_breakdown_full.py  test_roster.py  test_verification_disagreement.py
backend/tests/unit/: test_calc_formulas.py  test_charge_range_dose_scaling.py  test_hospital_identity.py  test_parse_xlsx.py
(+21 files in other folders)
